--- a/index.html
+++ b/index.html
@@ -3,10 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jupiter</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Art Lit</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            margin: 0;
+            background: url('images/indexbackground.jpg') no-repeat;
+            background-size: auto;
+            background-position: center center;
+        }
+        h1 {
+            color: white;
+            font-size: 4rem;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+            margin-bottom: 20px;
+        }
+        .email {
+            color: white;
+            font-size: 1.2rem;
+            font-weight: 300;
+            text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
+            opacity: 0.9;
+            text-decoration: none;
+            transition: opacity 0.3s ease;
+        }
+        .email:hover {
+            opacity: 1;
+        }
+    </style>
 </head>
 <body>
-    <h1>Art Lit</h1>
+    <h1>Ashot Amadei Ashot</h1>
+    <a href="mailto:alexisashot@gmail.com" class="email">alexisashot@gmail.com</a>
 </body>
 </html>
